# x-ray

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
config/: providers.yaml
docs/: architecture.md  hermes-integration.md
scripts/: bootstrap_twikit_cookies.py  x-data-mcp-hermes.sh
src/: __init__.py  config.py  contracts.py  diagnostics.py  router.py  server.py  smoke.py
src/providers/: __init__.py  base.py  getxapi.py  official_x.py  socialdata.py  stub.py  syndication.py  twikit.py
tests/: test_config.py  test_contracts.py  test_diagnostics.py  test_getxapi.py  test_mcp_stdio.py  test_official_x.py  test_provider_common.py  test_router.py  test_server.py  test_smoke.py  test_socialdata.py  test_syndication.py  test_twikit.py
x_mcp/: __init__.py  contracts.py  router.py  server.py
x_mcp/providers/: base.py  official_x.py  stub.py  syndication.py
