[project]
name = "x-ray"
version = "0.1.0"
description = "Read-only X data MCP server providers"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
official-x = ["xdk>=0.9.0"]
test = ["pytest>=7.0"]

[project.scripts]
x-data-mcp = "x_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
