[project]
name = "x-ray"
version = "0.1.0"
description = "Read-only X data MCP server providers"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0"]

[project.optional-dependencies]
official-x = ["xdk>=0.9.0"]
test = ["pytest>=7.0"]

[project.scripts]
x-data-mcp = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
