[project]
name = "x-ray"
version = "0.1.0"
description = "Read-only X data MCP server providers"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0"]

[project.optional-dependencies]
official-x = ["xdk>=0.9.0"]
test = ["pytest>=7.0"]
dev = ["ruff>=0.15"]

[project.scripts]
x-data-mcp = "src.server:main"
x-data-smoke = "src.smoke:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# High-signal set. E5xx (line length) is enforced via line-length above.
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "PIE", "RET", "RUF"]
